[Hai] - fix cors filter + add log filter