@@ -1,9 +1,7 @@
 package com.ou.apigateway.configs;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.client.loadbalancer.LoadBalanced;
 import org.springframework.cloud.gateway.filter.GlobalFilter;
@@ -36,24 +34,24 @@ public class ApplicationConfig {
         return WebClient.builder();
     }
 
-    // @Bean
-    // public CorsWebFilter corsWebFilter() {
-    //     String clientHostName = environment.getProperty("CLIENT_HOSTNAME");
-    //     CorsConfiguration corsConfig = new CorsConfiguration();
-    //     // corsConfig.setAllowedOrigins(Arrays.asList(clientHostName));
-    //     corsConfig.setMaxAge(3000L);
-    //     corsConfig.setAllowedMethods(List.of("PUT", "GET", "POST", "DELETE",
-    //             "OPTION"));
-    //     corsConfig.setAllowedHeaders(List.of("*"));
-    //     corsConfig.setAllowedOrigins(Collections.singletonList(clientHostName));
+    @Bean
+    public CorsWebFilter corsWebFilter() {
+        String clientHostName = environment.getProperty("CLIENT_HOSTNAME");
+        CorsConfiguration corsConfig = new CorsConfiguration();
+        // corsConfig.setAllowedOrigins(Arrays.asList(clientHostName));
+        corsConfig.setMaxAge(3000L);
+        corsConfig.setAllowedMethods(List.of("PUT", "GET", "POST", "DELETE",
+                "OPTION"));
+        corsConfig.setAllowedHeaders(List.of("*"));
+        corsConfig.setAllowedOrigins(Collections.singletonList(clientHostName));
 
-    //     corsConfig.setAllowCredentials(true);
+        corsConfig.setAllowCredentials(true);
 
-    //     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    //     source.registerCorsConfiguration("/**", corsConfig);
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", corsConfig);
 
-    //     return new CorsWebFilter(source);
-    // }
+        return new CorsWebFilter(source);
+    }
 
     @Bean
     public RouteLocator customRouteLocator(RouteLocatorBuilder builder) {
@@ -65,7 +63,7 @@ public class ApplicationConfig {
     }
 
     @Bean
-    public GlobalFilter postGlobalFilter() {
+    public GlobalFilter setCorsHeaderFilter() {
         return (exchange, chain) -> {
             return chain.filter(exchange)
                     .then(Mono.fromRunnable(() -> {
